[tool.poetry]
name = "coinbase-feed"
version = "0.1.0"
description = ""
authors = ["Johnny Rocketfingers <developer94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mutmut = "^2.2.0"
mypy = "^0.910"
pdbpp = "^0.10.3"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
